--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
                 <ul class="nav-links">
                     <li class="nav-link"><a href="#">Home</a></li>
                     <li class="nav-link">
-                        <a href="https://github.com/ARK-Software-Team/WQUIZ" target="_blank">About</a>
+                        <a href="https://github.com/ARK-Software-Team/WQUIZ" target="_blank" rel="noopener">About</a>
                     </li>
                     <li class="nav-link profile">
                         <a href="#">Profile
