--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/2100560cdb.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/2100560cdb.js" integrity="sha384-+1uUC1ey89KZ3EwgwUJ7nC0aOUFB5kMWAF2Z6/bdsCKtHHILg/hsC5qYE9VGCTQp" crossorigin="anonymous"></script>
 </head>
 
 <body>
