main project file

--- a/main.html
+++ b/main.html
@@ -150,10 +150,9 @@
             </div>
         </div>
     </div>
-    <script src="javascript.js"></script>
-    <script src="questions.js"></script>
-    <script src="userInfo.js"></script>
-    <script src="userExamData.js"></script>
+    <script type="module" src="javascript.js"></script>
+    <script src="functions.js"></script>
+    <script type="module" src="database.js"></script>
 </body>
 
 </html>
